fix: remove package-lock.json before install to fix cross-platform rollup issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Install and Build
         run: |
+          rm -f package-lock.json
           npm install
           npm run build
 
