--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@ygo_build/calc": "^0.0.2",
     "chart.js": "^4.4.0",
     "driver.js": "^1.4.0",
+    "gif.js": "^0.2.0",
+    "html2canvas": "^1.4.1",
     "naive-ui": "^2.38.1",
     "sql.js": "^1.13.0",
     "vue": "^3.4.15",
